--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="right-box">
                     <div class="form-container">
-                      <form action="insert.php" method="post">
+                      <form>
                         <div class="space">
                           <input type="text" class="email-box" placeholder="Email address or phone number" id="email" name="email" required/>
                 </div>
